# c-language-server

./: .gitignore  CMakeLists.txt  README.md
app/: main.cpp
commands/: debug.json  index-linux.json  resolve-s1.json  usages-s1.json
corpus/: sample1.c
corpus/sample2/: def1.h  def2.c  def2.h  main.c
lib/include/: stack-graph-engine.h  stack-graph-tree.h
lib/src/: stack-graph-engine.cpp  stack-graph-tree.cpp
tests/: engine-test.cpp  syntax-tree-test.cpp
vscode-plugin/c-lang-navigation/: CHANGELOG.md  README.md  extension.js  package-lock.json  package.json
